Using RMariaDB instead of RMySQL

--- a/shiny-mysql/Dockerfile
+++ b/shiny-mysql/Dockerfile
@@ -2,6 +2,12 @@ FROM asachet/shiny-base:latest
 
 # MySQL client lib
 RUN apt update -qq \
-&& apt install -y libmariadb-client-lgpl-dev 
+&& apt install -y \
+libmariadb-client-lgpl-dev \
+libmysqlclient-dev
  
-RUN install2.r -s RMySQL
+
+# https://github.com/r-dbi/RMariaDB
+RUN install2.r -s \
+DBI \
+RMariaDB
