Added maintainer label

--- a/shiny-base/Dockerfile
+++ b/shiny-base/Dockerfile
@@ -1,9 +1,12 @@
 FROM r-base:3.5.2
+LABEL maintainer="Antoine Sachet <antoine.sac@gmail.com>" \
+org.label-schema.vcs-url="https://github.com/antoine-sachet/docker-shiny"
 
 # Generic shiny app requirements
 RUN install2.r -s \
 shiny \
-shinythemes
+shinythemes \
+shinyjs
 
 # Minimal tidyverse
 RUN install2.r -s \
