--- a/shiny-mysql/Dockerfile
+++ b/shiny-mysql/Dockerfile
@@ -1,4 +1,6 @@
 FROM asachet/shiny-base:latest
+LABEL maintainer="Antoine Sachet <antoine.sac@gmail.com>" \
+org.label-schema.vcs-url="https://github.com/antoine-sachet/docker-shiny"
 
 # MySQL client lib
 RUN apt update -qq \
