Added `--error` flag to calls to install2.r

--- a/shiny-base/Dockerfile
+++ b/shiny-base/Dockerfile
@@ -3,19 +3,19 @@ LABEL maintainer="Antoine Sachet <antoine.sac@gmail.com>" \
 org.label-schema.vcs-url="https://github.com/antoine-sachet/docker-shiny"
 
 # Generic shiny app requirements
-RUN install2.r -s \
+RUN install2.r -s --error \
 shiny \
 shinythemes \
 shinyjs
 
 # Minimal tidyverse
-RUN install2.r -s \
+RUN install2.r -s --error \
 dplyr \
 readr \
 tidy
 
 # Misc useful packages
-RUN install2.r -s \
+RUN install2.r -s --error \
 config \
 logging \
 glue
