Added ggplot2 + scales and colour schemes

--- a/shiny-base/Dockerfile
+++ b/shiny-base/Dockerfile
@@ -19,3 +19,11 @@ RUN install2.r -s --error \
 config \
 logging \
 glue
+
+# Plotting packages
+RUN install2.r -s --error \
+ECharts2Shiny \
+ggplot2 \
+RColorBrewer \
+scales \
+viridis
