--- a/shiny-mysql/Dockerfile
+++ b/shiny-mysql/Dockerfile
@@ -5,8 +5,7 @@ org.label-schema.vcs-url="https://github.com/antoine-sachet/docker-shiny"
 # MySQL client lib
 RUN apt update -qq \
 && apt install -y \
-libmariadb-client-lgpl-dev \
-libmysqlclient-dev
+libmariadb-dev
  
 
 # https://github.com/r-dbi/RMariaDB
