Now using rocker/r-ver:3.5.2 for stability
r-ver is built on debian:stable whereas r-base was built on debian:testing

--- a/shiny-base/Dockerfile
+++ b/shiny-base/Dockerfile
@@ -1,4 +1,4 @@
-FROM r-base:3.5.2
+FROM rocker/r-ver:3.5.2
 LABEL maintainer="Antoine Sachet <antoine.sac@gmail.com>" \
 org.label-schema.vcs-url="https://github.com/antoine-sachet/docker-shiny"
 
