Revert "Updated libmariadb apt package"
No longer needed if using debian:stable instead of debian:testing

This reverts commit d2399bd9c042f8739d2c9b920b26f14bb7ed61ec.

--- a/shiny-mysql/Dockerfile
+++ b/shiny-mysql/Dockerfile
@@ -5,7 +5,8 @@ org.label-schema.vcs-url="https://github.com/antoine-sachet/docker-shiny"
 # MySQL client lib
 RUN apt update -qq \
 && apt install -y \
-libmariadb-dev
+libmariadb-client-lgpl-dev \
+libmysqlclient-dev
  
 
 # https://github.com/r-dbi/RMariaDB
