Fixed libs but working only with debian:stable

--- a/shiny-mysql/Dockerfile
+++ b/shiny-mysql/Dockerfile
@@ -5,10 +5,9 @@ org.label-schema.vcs-url="https://github.com/antoine-sachet/docker-shiny"
 # MySQL client lib
 RUN apt update -qq \
 && apt install -y \
-libmariadb-client-lgpl-dev \
-libmysqlclient-dev
+libmariadb-dev \
+default-libmysqlclient-dev
  
-
 # https://github.com/r-dbi/RMariaDB
 RUN install2.r -s --error \
 DBI \
