--- a/shiny-mysql/Dockerfile
+++ b/shiny-mysql/Dockerfile
@@ -1,4 +1,4 @@
-FROM asachet/shiny-base:latest
+FROM asachet/shiny-base:R3.5.2-stable-v1.2
 LABEL maintainer="Antoine Sachet <antoine.sac@gmail.com>" \
 org.label-schema.vcs-url="https://github.com/antoine-sachet/docker-shiny"
 
@@ -6,7 +6,7 @@ org.label-schema.vcs-url="https://github.com/antoine-sachet/docker-shiny"
 RUN apt update -qq \
 && apt install -y \
 libmariadb-dev \
-default-libmysqlclient-dev
+libmariadbclient-dev
  
 # https://github.com/r-dbi/RMariaDB
 RUN install2.r -s --error \
