Now removing downloaded packages to save space

--- a/shiny-base/Dockerfile
+++ b/shiny-base/Dockerfile
@@ -2,13 +2,17 @@ FROM rocker/r-ver:3.5.2
 LABEL maintainer="Antoine Sachet <antoine.sac@gmail.com>" \
 org.label-schema.vcs-url="https://github.com/antoine-sachet/docker-shiny"
 
+# useful for cloud health checks
+RUN apt update -qq && apt install -y curl
+
 # Generic shiny app requirements
 RUN install2.r -s --error \
 shiny \
 shinythemes \
 shinyjs \
 shinyWidgets \
-shinydashboard
+shinydashboard \
+&& rm -rf /tmp/downloaded_packages/
 
 # Minimal tidyverse
 RUN install2.r -s --error \
@@ -16,7 +20,8 @@ dplyr \
 forcats \
 purrr \
 readr \
-tidyr
+tidyr \
+&& rm -rf /tmp/downloaded_packages/
 
 # Misc useful packages
 RUN install2.r -s --error \
@@ -26,7 +31,8 @@ config \
 DT \
 # 2 packages to streamline the logging
 logging \
-glue
+glue \
+&& rm -rf /tmp/downloaded_packages/
 
 # Plotting packages
 RUN install2.r -s --error \
@@ -34,7 +40,5 @@ ECharts2Shiny \
 ggplot2 \
 RColorBrewer \
 scales \
-viridis
-
-# useful for cloud health checks
-RUN apt update && apt install -y curl
+viridis \
+&& rm -rf /tmp/downloaded_packages/
