--- a/shiny-dev/Dockerfile
+++ b/shiny-dev/Dockerfile
@@ -62,3 +62,7 @@ default-libmysqlclient-dev
 RUN install2.r -s --error \
 DBI \
 RMariaDB
+
+# My shiny helpr package
+RUN install2.r -s --error remotes \
+&& RUN installGithub.r antoine-sachet/shiny-helpr
